Prevent cover image becoming too large without JavaScript

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -370,7 +370,7 @@ a:focus {
 }
 .cover-image {
   position: absolute;
-  height: 100%;
+  max-height: 100%;
   width: 100%;
 }
 .post-header {
